--- a/css/global.css
+++ b/css/global.css
@@ -2,6 +2,11 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-family: sans-serif;
+}
+
+body {
+  font-family: sans-serif;
 }
 
 ul[role='list'] {
@@ -44,4 +49,8 @@ ul[role='list'] {
   border-radius: 50%;
   min-height: 300px;
   min-width: 300px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
